--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
-		<title>Preview</title>
+		<title>Dice</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		
 		<link rel="stylesheet" href="styles.css">
+		<script src="processing.js"></script>
 	</head>
 	<body>
-
+		<div class = 'page-wrap'>
+			<header>
+				<h1>Dice</h1>
+			</header>
+			<section id="content">
+				<canvas id="Dice" data-processing-sources="Dice.pde">
+				</canvas>
+			</section>
+		</div>	
+		<footer class = 'site-footer'>
+		    <div id='footerText'>Created by Zachary Hoffman</div>
+		</footer>
 	</body>
+
 </html>
